Fix platform dependency in px4lib 3 (#27)
* Squashed 'core/base/' changes from e115358..36f3db8

36f3db8 Started updating displays (#7)
4d601ec Add remaining components (#6)
037fdab Add remaining components (#5)
94421d2 Add remaining components (#4)
460e004 Fixed build functions. (#3)
704a83b Updated the Commander workspace template.
43bd888 Minor changes to the initial commander workspace template.
d304906 Added basic look-and-feel of newly created displays in commander workspace

git-subtree-dir: core/base
git-subtree-split: 36f3db8e619b23dae338b5e777f329c09c0ade22

* Moved around more configurations to shared locations

* Started configuring CPD and PPD

* Changed common TO configuration to use loopback.

* Fixed the cfs-ccsds.xml file to put the command code back in the right location.

* Completed all CFE-ES displays. Use these as a template for all future displays.

* Fixed missing perf state enumeration in the yaml file.

* All ES displays but perf are tested.

* Fixed missing overrides in the yaml file.

* Fixed CF configuration files to make better use of fire transfer.

* Completed fixing all the CF displays. Mostly tested.

* Update CPU ID and name for CPD.

* -Updated Displays
-Added the send icon to all send command buttons
-Fixed command scripts; made scripts embedded
-Needs to be reviewed

* Fixed SCH custom unit tests.  Added additional data to config/wh_config.yaml

* Polished CFE-EVS displays.

* Minor changes to CFE_EVS, CFE_SB, and CFE_TBL displays.

* Add udp flat tables for testing.

* Move UDP flat tables to specific folder.

* -Fixed PV Values in Apps Main OPI

* -Updated command scripts for apps

* -Made scripts embedded for apps Main OPI

* Add initial obc sitl config.

* -Updated OPIs for cfe_time
-TODO:Finish updating the rest of displays

* Completed CFE_ES displays. Verified displays and commands.

* Fixed the CFDP message IDs.  Configured the shared CS tables.

* CFE_ES,

--- a/modules/udp_pq/fsw/for_build/CMakeLists.txt
+++ b/modules/udp_pq/fsw/for_build/CMakeLists.txt
@@ -31,14 +31,15 @@
  #
  #############################################################################
 
-buildliner_add_app_def(sbn_uio_mbox
-    FILE sbn_uio_mbox
+buildliner_add_app_def(sbn_udp
+    FILE sbn_udp
     SOURCES
-        ${CMAKE_CURRENT_SOURCE_DIR}/../src/sbn_uio_mailbox_if.c
-        ${CMAKE_CURRENT_SOURCE_DIR}/../src/sbn_uio_mailbox_if.h
-        ${CMAKE_CURRENT_SOURCE_DIR}/../src/mailbox_map.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/../src/sbn_udp_if.c
+        ${CMAKE_CURRENT_SOURCE_DIR}/../src/sbn_udp_if.h
         ${CMAKE_CURRENT_SOURCE_DIR}/../src/mailbox_parser.c
         ${CMAKE_CURRENT_SOURCE_DIR}/../src/mailbox_parser.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/../src/sbn_udp_events.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/../src/sbn_udp_if_struct.h
 
     INCLUDES
         ${CMAKE_CURRENT_SOURCE_DIR}/../src/
