--- a/fsw/for_build/detail_doxy.in
+++ b/fsw/for_build/detail_doxy.in
@@ -1,15 +1,14 @@
 # Doxyfile 1.5.4
-#@INCLUDE_PATH=../docs/dox_src/mnem_maps \
-#              $(CFS_APP_SRC)/$(APPTARGET)/docs/dox_src/mnem_maps
-#@INCLUDE=cfs_$(APPTARGET)_cmd_mnem_map
-#@INCLUDE=cfs_$(APPTARGET)_tlm_mnem_map
+@INCLUDE_PATH=@APP_DEFINITION_DIR@/../../docs/dox_src/mnem_maps
+@INCLUDE=cfs_sbn_cmd_mnem_map
+@INCLUDE=cfs_sbn_tlm_mnem_map
 #---------------------------------------------------------------------------
 # Project related configuration options
 #---------------------------------------------------------------------------
 #DOXYFILE_ENCODING      = UTF-8
-PROJECT_NAME           = "CFS Software Bus Network (SBN) User's Guide"
+PROJECT_NAME           = "CFS Software Bus Network (SBN) Application on @BUILD_CONFIG_NAME@ Detailed Design"
 PROJECT_NUMBER         = 
-OUTPUT_DIRECTORY       = ../../docs/users_guide/html/
+OUTPUT_DIRECTORY       = @CFS_DOCS_HTML_DIR@/apps/sbn/
 CREATE_SUBDIRS         = NO
 OUTPUT_LANGUAGE        = English
 BRIEF_MEMBER_DESC      = YES
@@ -17,8 +16,8 @@ REPEAT_BRIEF           = YES
 ABBREVIATE_BRIEF       = 
 ALWAYS_DETAILED_SEC    = NO
 INLINE_INHERITED_MEMB  = NO
-FULL_PATH_NAMES        = NO
-#STRIP_FROM_PATH        = $(CFS_APP_SRC)a
+FULL_PATH_NAMES        = YES
+STRIP_FROM_PATH        = @PROJECT_SOURCE_DIR@
 STRIP_FROM_INC_PATH    = 
 SHORT_NAMES            = NO
 JAVADOC_AUTOBRIEF      = NO
@@ -27,20 +26,20 @@ MULTILINE_CPP_IS_BRIEF = NO
 DETAILS_AT_TOP         = NO
 INHERIT_DOCS           = YES
 SEPARATE_MEMBER_PAGES  = NO
-TAB_SIZE               = 8
-#ALIASES               += "event=\xrefitem cfeevents \"Event Message\" \"cFE Event Message Cross Reference\" "
-#ALIASES               += "retdesc=<TD WIDTH=\"80%\"> "
-#ALIASES               += "retcode=<TR><TD WIDTH=\"20%\" VALIGN=TOP> "
+TAB_SIZE               = 4
+ALIASES               += "event=\xrefitem cfeevents \"Event Message\" \"cFE Event Message Cross Reference\" "
+ALIASES               += "retdesc=<TD WIDTH=\"80%\"> "
+ALIASES               += "retcode=<TR><TD WIDTH=\"20%\" VALIGN=TOP> "
 ALIASES               += endcode=</TR>
-#ALIASES               += "returns=\return <TABLE BORDER=\"0\" CELLPADDING=\"2\" WIDTH=\"100%\"> "
+ALIASES               += "returns=\return <TABLE BORDER=\"0\" CELLPADDING=\"2\" WIDTH=\"100%\"> "
 ALIASES               += endreturns=</TABLE>
-#ALIASES               += "retstmt=<TR><TD COLSPAN=2 WIDTH=\"100%\"> "
+ALIASES               += "retstmt=<TR><TD COLSPAN=2 WIDTH=\"100%\"> "
 ALIASES               += endstmt=</TR>
-#ALIASES               += "fmcmd=\xrefitem cfsfmcmds \"Name\" \"File Manager Commands\"  "
-#ALIASES               += "fmtlm=\xrefitem cfsfmtlm \"Name\" \"File Manager Telemetry\"  "
-#ALIASES               += "fmcmdmnemonic=\xrefitem cfsfmcmdmnems \"Command Mnemonic(s)\" \"FM Command Mnemonic Cross Reference\" \b \c  "
-#ALIASES               += "fmtlmmnemonic=\xrefitem cfsfmtlmmnems \"Telemetry Mnemonic(s)\" \"FM Telemetry Mnemonic Cross Reference\" \b \c  "
-#ALIASES               += "fmcfg=\xrefitem cfsfmcfg \"Purpose\" \"CFS File Manager Configuration Parameters\"  " 
+ALIASES               += "sbncmd=\xrefitem cfssbncmds \"Name\" \"Software Bus Network Commands\"  "
+ALIASES               += "sbntlm=\xrefitem cfssbntlm \"Name\" \"Software Bus Network Telemetry\"  "
+ALIASES               += "sbncmdmnemonic=\xrefitem cfssbncmdmnems \"Command Mnemonic(s)\" \"SBN Command Mnemonic Cross Reference\" \b \c  "
+ALIASES               += "sbntlmmnemonic=\xrefitem cfssbntlmmnems \"Telemetry Mnemonic(s)\" \"SBN Telemetry Mnemonic Cross Reference\" \b \c  "
+ALIASES               += "sbncfg=\xrefitem cfssbncfg \"Purpose\" \"CFS Software Bus Network Configuration Parameters\"  " 
 OPTIMIZE_OUTPUT_FOR_C  = YES
 OPTIMIZE_OUTPUT_JAVA   = NO
 BUILTIN_STL_SUPPORT    = NO
@@ -92,30 +91,12 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = ../../docs/dox_src/users_guide/cfs_sbn.dox
-INPUT                  += ../../../modules/ipv4/docs/dox_src/users_guide/cfs_sbn_ipv4.dox
-INPUT                  += ../../../modules/shmem/docs/dox_src/users_guide/cfs_sbn_shmem.dox
-INPUT                  += ../../../sbn/fsw/src/sbn_app.c
-INPUT                  += ../../../sbn/fsw/src/sbn_loader.c
-INPUT                  += ../../../sbn/fsw/src/sbn_netif.c
-INPUT                  += ../../../sbn/fsw/platform_inc/
-INPUT                  += ../../../sbn/fsw/mission_inc/
-INPUT                  += ../../../modules/shmem/fsw/platform_inc/
-INPUT                  += ../../../modules/shmem/fsw/src/
-INPUT                  += ../../../modules/ipv4/fsw/platform_inc/
-INPUT                  += ../../../modules/ipv4/fsw/src/
-#INPUT                 += $(CFS_APP_SRC)/$(APPTARGET)/fsw/public_inc 
-#INPUT                 += ../src/$(APPTARGET)_msgdefs.h 
-#INPUT                 += ../src/$(APPTARGET)_msg.h 
-#INPUT                 += ../src/$(APPTARGET)_tbl.h 
-#INPUT                 += ../src/$(APPTARGET)_events.h 
-#INPUT                 += /mission_inc/$(APPTARGET)_perfids.h 
-#INPUT                 += ../../mission_inc/$(APPTARGET)_mission_cfg.h
-#INPUT                 += ../inc/$(APPTARGET)_msgids.h 
-#INPUT                 += ../inc/$(APPTARGET)_platform_cfg.h 
+INPUT                  = @APP_DEFINITION_DIR@/../../docs/dox_src/detailed_design/cfs_sbn.dox
+INPUT                 += @DEFINITION_SOURCES@
+INPUT                 += @CONFIG_SOURCES@
 #INPUT_ENCODING         = UTF-8
-FILE_PATTERNS          = *.c \
-                         *.h
+#FILE_PATTERNS          = *.c \
+#                         *.h
 RECURSIVE              = YES
 EXCLUDE                = 
 EXCLUDE_SYMLINKS       = NO
@@ -125,9 +106,7 @@ EXAMPLE_PATH           =
 EXAMPLE_PATTERNS       = *
 EXAMPLE_RECURSIVE      = NO
 IMAGE_PATH             = "./"
-IMAGE_PATH             += "../../../modules/shmem/docs/dox_src/users_guide/"
-IMAGE_PATH             += "../../docs/dox_src/users_guide/"
-#IMAGE_PATH            += "$(CFS_APP_SRC)/$(APPTARGET)/docs/dox_src/users_guide/"
+IMAGE_PATH            += @APP_DEFINITION_DIR@/../../docs/dox_src/detailed_design/"
 INPUT_FILTER           = 
 FILTER_PATTERNS        = 
 FILTER_SOURCE_FILES    = NO
@@ -137,9 +116,9 @@ FILTER_SOURCE_FILES    = NO
 SOURCE_BROWSER         = YES
 INLINE_SOURCES         = NO
 STRIP_CODE_COMMENTS    = YES
-REFERENCED_BY_RELATION = NO
-REFERENCES_RELATION    = NO
-REFERENCES_LINK_SOURCE = NO
+REFERENCED_BY_RELATION = YES
+REFERENCES_RELATION    = YES
+REFERENCES_LINK_SOURCE = YES
 USE_HTAGS              = NO
 VERBATIM_HEADERS       = YES
 #---------------------------------------------------------------------------
@@ -152,7 +131,7 @@ IGNORE_PREFIX          =
 # configuration options related to the HTML output
 #---------------------------------------------------------------------------
 GENERATE_HTML          = YES
-HTML_OUTPUT            = .
+HTML_OUTPUT            = @CFS_DOCS_HTML_DIR@/apps/sbn/
 HTML_FILE_EXTENSION    = .html
 HTML_HEADER            = 
 HTML_FOOTER            = 
@@ -161,8 +140,7 @@ HTML_ALIGN_MEMBERS     = YES
 GENERATE_HTMLHELP      = NO
 #HTML_DYNAMIC_SECTIONS  = NO
 CHM_FILE               = CFS_Help.chm
-#HHC_LOCATION           = "C:/Program Files/HTML Help Workshop/hhc.exe"
-HHC_LOCATION           =
+HHC_LOCATION           = "C:/Program Files/HTML Help Workshop/hhc.exe"
 GENERATE_CHI           = NO
 BINARY_TOC             = NO
 TOC_EXPAND             = NO
@@ -174,7 +152,7 @@ TREEVIEW_WIDTH         = 250
 # configuration options related to the LaTeX output
 #---------------------------------------------------------------------------
 GENERATE_LATEX         = NO
-LATEX_OUTPUT           = ../../latex/$(APPTARGET)
+LATEX_OUTPUT           = @CFS_DOCS_LATEX_DIR@/apps/sbn/
 LATEX_CMD_NAME         = latex
 MAKEINDEX_CMD_NAME     = makeindex
 COMPACT_LATEX          = YES
@@ -189,7 +167,7 @@ LATEX_HIDE_INDICES     = NO
 # configuration options related to the RTF output
 #---------------------------------------------------------------------------
 GENERATE_RTF           = NO
-RTF_OUTPUT             = ../../rtf/$(APPTARGET)
+RTF_OUTPUT             = @CFS_DOCS_DIR@/rtf/apps/sbn
 COMPACT_RTF            = YES
 RTF_HYPERLINKS         = NO
 RTF_STYLESHEET_FILE    = 
@@ -204,7 +182,7 @@ MAN_LINKS              = NO
 #---------------------------------------------------------------------------
 # configuration options related to the XML output
 #---------------------------------------------------------------------------
-GENERATE_XML           = NO
+GENERATE_XML           = YES
 XML_OUTPUT             = xml
 XML_SCHEMA             = 
 XML_DTD                = 
@@ -239,8 +217,8 @@ SKIP_FUNCTION_MACROS   = YES
 #---------------------------------------------------------------------------
 # Configuration::additions related to external references   
 #---------------------------------------------------------------------------
-TAGFILES               = ../cfe/cfe.tag=../cfe
-GENERATE_TAGFILE       = $(APPTARGET).tag
+TAGFILES               = @CFS_DOCS_HTML_DIR@/cfe/cfe.tag=../../cfe/
+GENERATE_TAGFILE       = @CFS_DOCS_HTML_DIR@/apps/sbn//sbn.tag
 ALLEXTERNALS           = NO
 EXTERNAL_GROUPS        = YES
 PERL_PATH              = /usr/bin/perl
@@ -256,10 +234,10 @@ COLLABORATION_GRAPH    = NO
 GROUP_GRAPHS           = YES
 UML_LOOK               = NO
 TEMPLATE_RELATIONS     = NO
-INCLUDE_GRAPH          = NO
-INCLUDED_BY_GRAPH      = NO
+INCLUDE_GRAPH          = YES
+INCLUDED_BY_GRAPH      = YES
 CALL_GRAPH             = YES
-CALLER_GRAPH           = NO
+CALLER_GRAPH           = YES
 GRAPHICAL_HIERARCHY    = NO
 DIRECTORY_GRAPH        = YES
 DOT_IMAGE_FORMAT       = png
